syntax = "proto3";

package ru.seranov.bookexpert.core.model.grpc;

message BookDescriptor {
  string id = 1;
  string name = 2;
  string description = 3;
}

message BookAddResponse {
  string requestId = 1;
  int64 processTime = 2;
}