syntax = "proto3";

package ru.seranov.bookexpert.core.service.grpc;

import "book_descriptor.proto";

service BookService {
  rpc add(ru.seranov.bookexpert.core.model.grpc.BookDescriptor)
      returns (ru.seranov.bookexpert.core.model.grpc.BookDescriptor) {}
}